--- a/production-grade-workflow/my_app/docker-compose.yml
+++ b/production-grade-workflow/my_app/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3'
 
 services:
-    bun_react_vite:
-          build: 
-            context: .
-            dockerfile: Dockerfile.dev
-          ports:
-            - "8000:8000"
-          volumes:
-            - /app/node_modules
-            - .:/app
+    web:
+      build: 
+        context: .
+        dockerfile: Dockerfile.dev
+      ports: 
+        - "3000:3000"
+      volumes:
+        - /app/node_modules
+        - .:/app
     tests:
-          build:
-            context: .
-            dockerfile: Dockerfile.dev
-          volumes:
-            - /app/node_modules
-            - .:/app
-          command: ["bun","test"]
+      build: 
+        context: .
+        dockerfile: Dockerfile.dev
+      volumes:
+        - /app/node_modules
+        - .:/app
+      command: ["npm","run","test"]
