--- a/production-grade-workflow/my_app/.travis.yml
+++ b/production-grade-workflow/my_app/.travis.yml
@@ -6,4 +6,16 @@ before_install:
     - docker build -t pritambiswas00/react-prod -f Dockerfile.dev .
 
 script:
-    - docker run -e CI=true pritambiswas00/react-prod npm run test 
+    - docker run -e CI=true pritambiswas00/react-prod npm run test
+
+deploy:
+    provider: elasticbeanstalk
+    region: "ap-south-1"
+    app: "docker-react-production"
+    env: "Docker-react-production-env"
+    bucket_name: "elasticbeanstalk-ap-south-1-187135655674"
+    bucket_path: "docker-react-production"
+    on:
+      branch: master
+    access_key_id: "$AWS_ACCESS_KEY"
+    secret_access_key: "$AWS_ACCESS_SECRET_KEY"  
